--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "description": "",
   "dependencies": {
     "axios": "^0.21.1",
+    "img": "^3.0.3",
+    "p": "^0.2.0",
+    "path": "^0.12.7",
     "prop-types": "^15.7.2",
+    "public": "^0.1.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^17.0.2",
+    "src": "^1.1.2"
   },
   "devDependencies": {
     "sass": "^1.38.0"
