--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-r": "^2.0.0-rc02",
     "react-router-dom": "^5.2.1",
     "s": "^1.0.0",
     "src": "^1.1.2"
