--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "img": "^3.0.3",
+    "moment": "^2.29.1",
     "p": "^0.2.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
