--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-r": "^2.0.0-rc02",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.1",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "s": "^1.0.0",
     "src": "^1.1.2"
   },
