--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "src": "^1.1.2"
   },
   "devDependencies": {
-    "sass": "^1.38.0"
+    "parcel-bundler": "^1.12.5",
+    "sass": "^1.42.1"
   }
 }
